change lastEstPose to linked list